--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.59",
-    "@types/react": "^18.2.33",
+    "@types/node": "^16.18.60",
+    "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,9 +17,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start tailwind",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "tailwind": "npx tailwindcss -i ./src/app/index.css -o ./dist/output.css --watch",
+    "format": "prettier . --write",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +41,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.53.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "tailwindcss": "^3.3.5"
   }
 }
