--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.5.7",
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -20,7 +20,7 @@
     "start": "react-scripts start tailwind",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "tailwind": "npx tailwindcss -i ./src/app/index.css -o ./dist/output.css --watch",
+    "tailwind": "npx tailwindcss -i src/app/styles/index.css -o ./dist/output.css --watch",
     "format": "prettier . --write",
     "eject": "react-scripts eject"
   },
@@ -43,9 +43,12 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "eslint": "^8.53.0",
+    "jest": "^27.5.1",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "ts-node": "^10.9.1"
   }
 }
